DFR-1074: Initial commit