@@ -3,10 +3,10 @@ package uk.gov.hmcts.reform.finrem.caseorchestration.handler;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.callback.CallbackType;
+import uk.gov.hmcts.reform.finrem.caseorchestration.controllers.GenericAboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.finrem.caseorchestration.helper.GeneralApplicationHelper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.CaseType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.EventType;
@@ -20,6 +20,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_CREATED_BY;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_OUTCOME_DECISION;
@@ -28,7 +29,8 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 @Slf4j
 @Service
 @RequiredArgsConstructor
-public class GeneralApplicationOutcomeAboutToStartHandler implements CallbackHandler, GeneralApplicationHandler {
+public class GeneralApplicationOutcomeAboutToStartHandler
+    implements CallbackHandler<Map<String, Object>>, GeneralApplicationHandler {
 
     private final GeneralApplicationHelper helper;
 
@@ -40,8 +42,9 @@ public class GeneralApplicationOutcomeAboutToStartHandler implements CallbackHan
     }
 
     @Override
-    public AboutToStartOrSubmitCallbackResponse handle(CallbackRequest callbackRequest,
-                                                       String userAuthorisation) {
+    public GenericAboutToStartOrSubmitCallbackResponse<Map<String, Object>> handle(
+        CallbackRequest callbackRequest,
+        String userAuthorisation) {
         CaseDetails caseDetails = callbackRequest.getCaseDetails();
         log.info("Received on start request to outcome general application for Case ID: {}", caseDetails.getId());
         Map<String, Object> caseData = caseDetails.getData();
@@ -53,26 +56,26 @@ public class GeneralApplicationOutcomeAboutToStartHandler implements CallbackHan
             log.info("general application has outcomed {} while existing ga not moved to collection for Case ID: {}",
                 outcome, caseDetails.getId());
             if (referredList.isEmpty() && outcome != null) {
-                return AboutToStartOrSubmitCallbackResponse.builder().data(caseData)
+                return GenericAboutToStartOrSubmitCallbackResponse.<Map<String, Object>>builder().data(caseData)
                     .errors(List.of("There are no general application available for decision.")).build();
             }
             log.info("setting outcome list if existing ga not moved to collection for Case ID: {}", caseDetails.getId());
             setOutcomeListForNonCollectionGeneralApplication(caseData, index, userAuthorisation);
         } else {
             if (referredList.isEmpty()) {
-                return AboutToStartOrSubmitCallbackResponse.builder().data(caseData)
+                return GenericAboutToStartOrSubmitCallbackResponse.<Map<String, Object>>builder().data(caseData)
                     .errors(List.of("There are no general application available for decision.")).build();
             }
             List<DynamicListElement> dynamicListElements = referredList.stream()
                 .map(ga -> getDynamicListElements(ga.getId(), getLabel(ga.getGeneralApplicationItems(), index.incrementAndGet())))
-                .toList();
+                .collect(Collectors.toList());
 
             DynamicList dynamicList = generateAvailableGeneralApplicationAsDynamicList(dynamicListElements);
 
             caseData.put(GENERAL_APPLICATION_OUTCOME_LIST, dynamicList);
             caseData.remove(GENERAL_APPLICATION_OUTCOME_DECISION);
         }
-        return AboutToStartOrSubmitCallbackResponse.builder().data(caseData).build();
+        return GenericAboutToStartOrSubmitCallbackResponse.<Map<String, Object>>builder().data(caseData).build();
     }
 
     private void setOutcomeListForNonCollectionGeneralApplication(Map<String, Object> caseData,
